[tool.poetry]
name = "fake-server"
version = "0.3.1"
description = "A fake server than catch all path and response success message or whatever data you defined."
authors = ["chroming <chroming@live.com>"]

readme = "README.md"
repository = "https://github.com/chroming/fake_server"
license = "MIT"
documentation = "https://github.com/chroming/fake_server/blob/master/README.md"

[tool.poetry.dependencies]
python = ">3.7"
click = "^7.1.2"
loguru = "^0.5.1"
quart = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
